#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-06-05
2012-07-29 Andy Salnikov
- if the queue is full and terminate is called on DgramReader thread
  it will hang forever trying to push one more datagram into a queue,
  fix by removing all datagrams first before adding EOD datagram

Tag: V00-06-04
2012-07-27 Andy Salnikov
- small fixes to doxygen comments

Tag: V00-06-03
2012-07-24 Andy Salnikov
- rhel6/gcc44 migration, added missing headers

Tag: V00-06-02
2012-07-17 Andy Salnikov
- fix a comment

Tag: V00-06-01
2012-07-15 Andy Salnikov
- generate exception when expected live files are not there

Tag: V00-06-00
2012-07-12 Andy Salnikov
- live reading implementation more or less complete, simple tests run OK

Tag: V00-05-02
2012-07-10 Andy Salnikov
- forgot to update unit test for new MergeMode enums

Tag: V00-05-01
2012-07-09 Andy Salnikov
- mergeMode() method also accepts "old" enum names

Tag: V00-05-00
2012-07-09 Andy Salnikov
- a bit of redesign, split iterators into iterators over datagrams
  and iterators over files
- iteration over files has two implementation, first is based on static 
  list of input files as before, second uses database as the source of 
  live data; second implementation is not tested yet

Tag: V00-04-01
2012-06-22 Andy Salnikov
- forgot to update tests to use new class names

Tag: V00-04-00
2012-06-22 Andy Salnikov
- renamed XtcDgIterator class into XtcChunkDgIter, XtcDechunk into
  XtcStreamDgIter
- updated comments in few places

Tag: V00-03-01
2012-06-21 Andy Salnikov
- implementing live mode for XtcDgIterator
- new test app test/XtcDgIteratorTest.cpp

Tag: V00-03-00
2012-06-20 Andy Salnikov