@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-06-06
+2012-10-11 Andy Salnikov
+- if live database contains no info about files then RunFileIterLive 
+  throws exception instead of returning empty "EOF" histogram
+
 Tag: V00-06-05
 2012-07-29 Andy Salnikov
 - if the queue is full and terminate is called on DgramReader thread
